# celex

./: .gitignore  README.md  pyproject.toml
NOTES/: celex_data_structure.md  review_english_pronunciation_variants_2026-07-08.md
celex/: __init__.py  cache.py  dutch_header  english_header  german_header  lexicon.py  locations.py  models.py  parser.py  query.py  timing_tier.py  training_data.py  utils.py
tests/: conftest.py  test_celex.py  test_lexicon.py  test_training_data.py
