[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celex"
version = "0.0.9"
description = "Parser for the CELEX lexical database (Dutch, English, German)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phone-mapper",
]

[tool.setuptools]
packages = ["celex"]

[tool.uv.sources]
phone-mapper = { git = "https://github.com/martijnbentum/phone_mapper" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
